--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "wxt-module-clipboard",
-  "description": "WXT module to enable clipboard operations using Chrome's offscreen API",
   "version": "0.1.0",
+  "description": "WXT module for easy clipboard writing from content scripts using Chrome's offscreen API",
+  "keywords": [
+    "wxt"
+  ],
+  "homepage": "https://github.com/yukidaruma/wxt-module-clipboard#readme",
+  "bugs": {
+    "url": "https://github.com/yukidaruma/wxt-module-clipboard/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yukidaruma/wxt-module-clipboard.git"
+  },
+  "license": "MIT",
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": {
@@ -38,6 +47,9 @@
       }
     }
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -45,18 +57,14 @@
     "build": "unbuild",
     "dev": "unbuild --watch"
   },
-  "keywords": [
-    "wxt"
-  ],
-  "license": "MIT",
-  "peerDependencies": {
-    "typescript": "^5",
-    "wxt": ">=0.19.16"
-  },
   "devDependencies": {
     "@types/chrome": "^0.0.277",
     "typescript": "^5",
     "unbuild": "^3.6.1",
     "wxt": "^0.19.16"
+  },
+  "peerDependencies": {
+    "typescript": "^5",
+    "wxt": ">=0.19.16"
   }
 }
